<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".activityopciones">

    <TextView
        android:id="@+id/txtmensaje"
        android:layout_width="378dp"
        android:layout_height="102dp"
        android:text="@string/selecciona_una_secci_n_a_configurar"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.31" />

    <ImageView
        android:id="@+id/iconopluma"
        android:layout_width="130dp"
        android:layout_height="151dp"
        android:contentDescription="@string/todo1_"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.005"
        app:srcCompat="@drawable/icono" />

    <TextView
        android:id="@+id/txttitulo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:text="@string/opciones_"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.884"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.133" />

    <TableLayout
        android:id="@+id/tablelayout1"
        android:layout_width="348dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.593"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.61">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnpantalla"
                android:layout_width="246dp"
                android:layout_height="64dp"
                android:backgroundTint="#673AB7"
                android:fontFamily="@font/aclonica"
                android:text="@string/pantalla"
                android:textColor="#FFEB3B"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnsonido"
                android:layout_width="341dp"
                android:layout_height="64dp"
                android:backgroundTint="#673AB7"
                android:fontFamily="@font/aclonica"
                android:text="@string/sonido"
                android:textColor="#FFEB3B"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="83dp">

            <Button
                android:id="@+id/btntienda"
                android:layout_width="321dp"
                android:layout_height="64dp"
                android:backgroundTint="#673AB7"
                android:fontFamily="@font/aclonica"
                android:text="@string/tienda"
                android:textColor="#FFEB3B"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="346dp"
        android:layout_height="202dp"
        android:layout_marginBottom="9dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.569"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.904">

        <Button
            android:id="@+id/btnMapa"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:backgroundTint="#673AB7"
            android:text="@string/mapa"
            android:textColor="#FFEB3B"
            android:textColorLink="#FFEB3B"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnBase"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:backgroundTint="#673AB7"
            android:text="@string/base_de_datos"
            android:textColor="#FFEB3B"
            android:textColorLink="#FFEB3B" />

        <Button
            android:id="@+id/btnSalir"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:backgroundTint="#673AB7"
            android:text="@string/salir_"
            android:textColor="#FFEB3B" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>